@@ -1,4 +1,5 @@
 Development
+    Make window resize correctly when playlist is hidden
     Make notification work again
 0.9.2
     Updated Polish Translation
